--- a/index.html
+++ b/index.html
@@ -168,14 +168,16 @@
     }
     @media screen and (max-width: 768px) {
     main {
+        align-items: center;
+        overflow-y: auto;
         flex-direction: column;
-        height: auto;
-        width: 95%;
+        height: 100vh;
+        width: 85%;
         padding: 20px;
     }
 
     .left-section, .right-section {
-        width: 100%;
+        width: 90%;
         margin-left: 0;
     }
 
@@ -193,25 +195,18 @@
     }
 
     .Reset {
-        height: auto;
+        height:auto;
     }
 
     #reset {
-        width: 100%;
+        width: 200px;
         height: 3em;
         font-size: 18px;
     }
-
-    .sub-percentages {
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
-
     #btn, #special-btn {
         width: 48%;
         margin-bottom: 10px;
     }
-
     h1 {
         font-size: 32px;
     }
@@ -219,14 +214,20 @@
     h5 {
         font-size: 24px;
     }
-
+    #amount,#amount1{
+        height: 20px;
+    }
     #dollar {
         width: 16px;
         height: 18px;
     }
 
     .right-section {
-        padding: 15px;
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+        height:30%;
+        padding: 12px;
     }
 
     #style1,
