--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         align-items: center;
         overflow-y: auto;
         flex-direction: column;
-        height: 100vh;
+        height: 100dvh;
         width: 85%;
         padding: 20px;
     }
